# arducopter_recv

./: .gitignore  .gitmodules  CMakeLists.txt  CircularBuffer.m  README.md  build.sh  mavlink_attitude.m  read_6dof.m  setup.sh  square_couch.plan  youtube_example.m
matlab/: mavlink_attitude.m  read_pid.m
src/: CMakeLists.txt  main.cpp  mavlink_client.cpp  mavlink_client.hpp
